--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
-        "predis/predis": "^2.2"
+        "predis/predis": "^2.2",
+        "srmklive/paypal": "~3.0",
+        "paypal/rest-api-sdk-php": "^1.14"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
