--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,11 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
+        "paypal/rest-api-sdk-php": "^1.14",
         "predis/predis": "^2.2",
-        "srmklive/paypal": "~3.0",
-        "paypal/rest-api-sdk-php": "^1.14"
+        "spatie/laravel-cookie-consent": "^3.2",
+        "spatie/laravel-sitemap": "*",
+        "srmklive/paypal": "~3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
